...
                android:hint="@string/DIALOG_RECEIPTMENU_HINT_NAME"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.wops.receiptsgo.widget.ui.TextInputAutoCompleteTextView
                    android:id="@+id/receipt_name"
                    style="@style/Widget.SmartReceipts.OutlinedEditText"
                    android:completionThreshold="1"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:textStyle="bold" />

...
                app:layout_constraintEnd_toStartOf="@id/decimal_separator_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/receipt_name_wrapper"
                app:startIconDrawable="@drawable/ic_receipt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/receipt_price"
                    style="@style/Widget.SmartReceipts.OutlinedEditText"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal|numberSigned" />

            </com.google.android.material.textfield.TextInputLayout>

...
                style="@style/Widget.SmartReceipts.Button.Secondary"
                android:layout_width="@dimen/samsung_decimal_separator_button_dimens"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_small"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/receipt_price_wrapper"
                app:layout_constraintEnd_toStartOf="@id/receipt_currency"
                app:layout_constraintStart_toEndOf="@id/receipt_price_wrapper"
                app:layout_constraintTop_toTopOf="@id/receipt_price_wrapper"
                tools:text="."
                tools:visibility="visible" />

            <com.wops.receiptsgo.widget.ui.OutlinedSpinner
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/receipt_price_wrapper"
                app:startIconContentDescription="@string/DIALOG_RECEIPTMENU_HINT_EXCHANGE_RATE"
                tools:visibility="visible">

                <com.wops.receiptsgo.widget.NetworkRequestAwareEditText
                    android:id="@+id/receipt_exchange_rate"
                    app:drawableStartCompat="@drawable/ic_exchange_rate_24dp"
                    app:drawableTint="@color/navigation_inactive"
                    android:drawablePadding="@dimen/padding_normal"
                    style="@style/Widget.SmartReceipts.OutlinedEditText"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal|numberSigned" />
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/receipt_exchange_rate_wrapper"
                app:startIconContentDescription="@string/DIALOG_RECEIPTMENU_HINT_EXCHANGE_RATE"
                tools:visibility="visible">

                <EditText
                    android:id="@+id/receipt_exchanged_result"
                    style="@style/Widget.SmartReceipts.OutlinedEditText"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal|numberSigned" />

            </com.google.android.material.textfield.TextInputLayout>

...
                app:layout_constraintEnd_toStartOf="@id/receipt_tax2_wrapper"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/receipt_exchanged_wrapper"
                app:startIconDrawable="@drawable/ic_business_center_24dp">

                <com.wops.receiptsgo.widget.ui.TextInputAutoCompleteTextView
                    android:id="@+id/receipt_tax1"
                    style="@style/Widget.SmartReceipts.OutlinedEditText"
                    android:completionThreshold="1"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal|numberSigned" />

            </com.google.android.material.textfield.TextInputLayout>
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/receipt_tax1_wrapper"
                app:startIconContentDescription="@string/DIALOG_RECEIPTMENU_HINT_EXCHANGE_RATE"
                app:startIconDrawable="@drawable/ic_date_24dp">

                <com.wops.receiptsgo.date.DateEditText
                    android:id="@+id/receipt_date"
                    style="@style/Widget.SmartReceipts.OutlinedEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.wops.receiptsgo.widget.ui.OutlinedSpinner
                android:id="@+id/receipt_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_tiny"
                app:captionBackgroundColor="@color/card_background"
                app:captionText="@string/DIALOG_RECEIPTMENU_HINT_CATEGORY"
                app:layout_constraintTop_toBottomOf="@+id/receipt_date_wrapper"
...
                android:hint="@string/DIALOG_RECEIPTMENU_HINT_COMMENT"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/receipt_category"
                app:startIconDrawable="@drawable/ic_comment">

                <AutoCompleteTextView
                    android:id="@+id/receipt_comment"
                    style="@style/Widget.SmartReceipts.OutlinedEditText"
                    android:completionThreshold="1"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences|textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>
...
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/receipt_payment_method" />

            <CheckBox
                android:id="@+id/receipt_expensable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_tiny"
                android:minHeight="@dimen/default_input_row_size"
                android:padding="@dimen/padding_small"
                android:text="@string/DIALOG_RECEIPTMENU_HINT_EXPENSABLE"
                android:textAppearance="@style/Widget.SmartReceipts.TextView.Subhead"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/receipt_extras" />

            <CheckBox
                android:id="@+id/receipt_fullpage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_tiny"
                android:minHeight="@dimen/default_input_row_size"
                android:padding="@dimen/padding_small"
                android:text="@string/DIALOG_RECEIPTMENU_HINT_FULLPAGE"
...
