<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/update_trip_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_background"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <com.wops.receiptsgo.widget.tooltip.Tooltip
        android:id="@+id/tooltip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_large">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/trip_input_name_wrapper"
                style="@style/Widget.SmartReceipts.TextInputLayout"
                android:hint="@string/DIALOG_TRIPMENU_HINT_NAME">

                <AutoCompleteTextView
                    android:id="@+id/name"
                    style="@style/Widget.SmartReceipts.OutlinedEditText"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:maxLength="50"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/trip_input_start_date_wrapper"
                style="@style/Widget.SmartReceipts.TextInputLayout"
                android:layout_marginTop="@dimen/margin_tiny"
                android:hint="@string/DIALOG_TRIPMENU_HINT_START"
                app:startIconDrawable="@drawable/ic_date_24dp">

                <com.wops.receiptsgo.date.DateEditText
                    android:id="@+id/start_date"
                    style="@style/Widget.SmartReceipts.OutlinedEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/trip_input_end_date_wrapper"
                style="@style/Widget.SmartReceipts.TextInputLayout"
                android:layout_marginTop="@dimen/margin_tiny"
                android:hint="@string/DIALOG_TRIPMENU_HINT_END"
                app:startIconDrawable="@drawable/ic_date_24dp">

                <com.wops.receiptsgo.date.DateEditText
                    android:id="@+id/end_date"
                    style="@style/Widget.SmartReceipts.OutlinedEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.wops.receiptsgo.widget.ui.OutlinedSpinner
                android:id="@+id/currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_tiny"
                app:captionBackgroundColor="@color/card_background"
                app:captionText="@string/DIALOG_RECEIPTMENU_HINT_CURRENCY"
                app:startIcon="@drawable/ic_money" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/trip_input_comment_wrapper"
                style="@style/Widget.SmartReceipts.TextInputLayout"
                android:layout_marginTop="@dimen/margin_tiny"
                android:hint="@string/DIALOG_RECEIPTMENU_HINT_COMMENT"
                app:startIconContentDescription="@string/DIALOG_RECEIPTMENU_HINT_COMMENT"
                app:startIconDrawable="@drawable/ic_comment">

                <AutoCompleteTextView
                    android:id="@+id/trip_comment"
                    style="@style/Widget.SmartReceipts.OutlinedEditText"
                    android:completionThreshold="1"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences|textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dialog_tripmenu_cost_center_layout"
                style="@style/Widget.SmartReceipts.TextInputLayout"
                android:layout_marginTop="@dimen/margin_tiny"
                android:hint="@string/DIALOG_RECEIPTMENU_HINT_COST_CENTER"
                android:visibility="gone"
                app:startIconContentDescription="@string/DIALOG_RECEIPTMENU_HINT_COST_CENTER"
                app:startIconDrawable="@drawable/ic_category_24dp"
                tools:visibility="visible">

                <AutoCompleteTextView
                    android:id="@+id/cost_center"
                    style="@style/Widget.SmartReceipts.OutlinedEditText"
                    android:completionThreshold="1"
                    android:inputType="textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>