...
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/bottom_app_bar"
        layout="@layout/view_bottom_app_bar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/smart_receipts_colorPrimaryDark"
        android:src="@drawable/ic_round_add_24"
        app:borderWidth="0dp"
        app:layout_anchor="@id/bottom_app_bar"
...
